--- a/Project.toml
+++ b/Project.toml
@@ -5,5 +5,6 @@ version = "0.1.0"
 
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
